--- a/src/app/style/tailwind.css
+++ b/src/app/style/tailwind.css
@@ -66,3 +66,7 @@ h3 {
     @apply scale-95 bg-gray-300;
   }
 }
+
+.loader {
+  @apply aspect-square w-5 animate-spin rounded-full border-4 border-gray-300 border-t-blue-600;
+}
